<resources>
    <string name="app_name">Biblioteca</string>
    <string name="menu_item_home">Início</string>
    <string name="menu_item_books">Livros</string>
    <string name="menu_item_blog">Blog</string>
    <string name="user">Utilizador</string>
    <string name="login">Iniciar sessão</string>
    <string name="signup">Criar conta</string>
    <string name="help">Ajuda</string>
    <string name="navigation_drawer_open">Aberto</string>
    <string name="navigation_drawer_close">Fechado</string>
    <string name="help_topics">Tópicos de ajuda</string>
    <string name="help_assistant">Assistente virtual</string>
    <string name="info">Info</string>
    <string name="about_us">Sobre nós</string>
    <string name="login_title">INÍCIO DE SESSÃO</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Entrar</string>
    <string name="signup_email">Email</string>
    <string name="signup_button">Guardar</string>
    <string name="signup_title">NOVA CONTA</string>
    <string name="blog_title">BLOG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accountName">Nome:</string>
    <string name="accountEmail">Email:</string>
    <string name="accountMorada">Morada:</string>
    <string name="accountContacto">Contacto:</string>
    <string name="accountAlterarDados">Alterar dados</string>
    <string name="accountEdit">Editar dados pessoais</string>
    <string name="accountBooks">Consultar livros</string>
    <string name="save">Guardar alterações</string>
    <string name="book_title">Título</string>
    <string name="order_name">Nome:</string>
    <string name="order_email">Email:</string>
    <string name="order">Requisitar</string>
    <string name="order_cancel">Cancelar</string>
    <string name="library_blog">Blog da Biblioteca</string>
    <string name="book_request">Requisição de livros</string>
    <string name="blog_about">Sobre o Blog</string>
    <string name="post_title">Título</string>
    <string name="post_author">Autor</string>
    <string name="post_created">Criado em</string>
    <string name="comments">Comentário</string>
    <string name="post_text">Conteúdo</string>
    <string name="tv_comment_text">Comentários</string>
    <string name="manage_comments">Gerir a aplicação</string>
    <string name="management">Gestão</string>
    <string name="manage_orders">Gerir encomendas</string>
    <string name="comment_management">Gerir comentários</string>
    <string name="order_management">Gerir requisições</string>
    <string name="welcome">Benvindo à Biblioteca</string>
    <string name="comment_author">Autor do comentário</string>
    <string name="comment_management_text">Texto do comentário</string>
    <string name="tv_comment_management_idpost">Identificação do post</string>
    <string name="management_logout">Sair</string>
    <string name="comment_delete">Apagar comentário</string>
    <string name="comment_idpost">Identificação do post</string>
    <string name="order_description">Descrição</string>
    <string name="order_details_deadline">Prazo</string>
    <string name="order_details_email">Email</string>
    <string name="date">Data</string>
    <string name="identification">Identificação</string>
    <string name="book_author">Autor</string>
    <string name="book_theme">Tema</string>
    <string name="book_editor">Editora</string>
    <string name="book_isbn">ISBN</string>
    <string name="update_order">Editar pedido</string>
    <string name="order_id">Número do pedido</string>
    <string name="save_comment">Guardar</string>
    <string name="book_pages">Nº páginas</string>
</resources>