<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:id="@+id/bookContainer">

    <ImageView
        android:id="@+id/book_details_image"
        android:layout_width="130dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/book_title" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/book_author" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/book_theme" />

            <TextView
                android:id="@+id/book_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/book_editor" />

            <TextView
                android:id="@+id/book_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/book_isbn" />

            <TextView
                android:id="@+id/book_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/book_pages" />

            <TextView
                android:id="@+id/book_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>