<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BookDetails">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:id="@+id/book_appBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/book_colapsingToolBar"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Título"
            app:contentScrim="@color/design_default_color_primary"
            app:expandedTitleMargin="30dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/book_details_image"
                    android:layout_width="130dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_details_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_title"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/book_details_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_author"
                        android:textColor="#E1BEE7"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/book_details_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_theme"
                        android:textColor="#E1BEE7"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/bookDetailsEditor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_editor"
                        android:textColor="#E1BEE7"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/bookDetailsIsbn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_isbn"
                        android:textColor="#E1BEE7"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/bookDetailsPages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Numero de paginas"
                        android:textColor="#E1BEE7"
                        android:textSize="17sp" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/tv_book_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/order"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/order_icon" />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>