<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CommentDetails">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/comment_details_app_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/comment_details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/design_default_color_primary"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_comment_details_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/comment_author"
                    android:textSize="18sp"
                    android:textColor="#E1BEE7" />

                <TextView
                    android:id="@+id/tv_comment_details_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/comments"
                    android:textSize="18sp"
                    android:textColor="#E1BEE7" />

                <TextView
                    android:id="@+id/tv_comment_details_idpost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/comment_idpost"
                    android:textColor="#E1BEE7"
                    android:textSize="18sp" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_comment_details_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/comment_delete"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:drawableEndCompat="@drawable/delete_icon" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>